#63 统一Tools中的脚本，小幅优化启动参数